# socat

./: CHANGES  CMakeLists.txt  Makefile.in  README  README.md  VERSION  compat.h  config.h.in  configure.ac  error.c  fdname.c  filan.c  filan_main.c  hostan.c  procan-cdefs.c  procan.c  socat-broker.sh  socat-mux.sh  socat.c  socat.spec  sslcls.c  sslcls.h  sycls.c  sycls.h  sysincludes.h  sysutils.c  sysutils.h  test.sh  utils.c  vsnprintf_r.c  xio-creat.c  xio-exec.c  xio-fdnum.c  xio-fdnum.h  xio-file.c  xio-gopen.c  xio-interface.c  xio-interface.h  xio-ip.c  xio-ip.h  (+61 more)
.github/workflows/: testing.yaml
doc/: socat-tun.html  socat.yo
notes/: VERSION
scripts/: socat-chain.sh
src/: socat.c  sysutils.c  xio-dccp.c  xio-ip.h  xio-ip6.c  xio-ipapp.c  xio-ipapp.h  xio-openssl.c  xio-progcall.c  xio-proxy.c  xio-socketpair.c  xio-socks5.c  xio-tcpwrap.c  xioinitialize.c  xioopts.c
